// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EmptyCard Component should render correctly 1`] = `
<div>
  <Styled(Row)
    fullBleed={true}
  >
    <Styled(Col)
      className="emptyCard__imgWrapper"
      colSize={
        Object {
          "large": 1,
          "medium": 1,
          "small": 1,
        }
      }
    >
      <img
        alt="credit card icon"
        className="emptyCard__img"
        data-locator="payment-GC-Icon"
        src="/static/images/credit-card.png"
      />
    </Styled(Col)>
    <Styled(Col)
      className="emptyCard__body"
      colSize={
        Object {
          "large": 11,
          "medium": 7,
          "small": 5,
        }
      }
      ignoreGutter={
        Object {
          "large": false,
          "medium": false,
          "small": true,
        }
      }
    >
      <Styled(BodyCopy)
        className="emptyCard__heading"
        color="text.primary"
        component="p"
        fontFamily="secondary"
        fontSize="fs14"
        fontWeight="semibold"
        letterSpacing="normal"
        lineHeight="lh107"
        link={Object {}}
        tag="p"
        textAlign="left"
      />
      <Styled(BodyCopy)
        className="emptyCard__description--desktop"
        color="text.primary"
        component="p"
        fontFamily="secondary"
        fontSize="fs14"
        fontWeight="regular"
        letterSpacing="normal"
        lineHeight="lh115"
        link={Object {}}
        tag="p"
        textAlign="left"
      />
    </Styled(Col)>
    <Styled(Col)
      className="emptyCard__description--mobile"
      colSize={
        Object {
          "large": 11,
          "medium": 7,
          "small": 6,
        }
      }
      ignoreGutter={
        Object {
          "large": false,
          "medium": false,
          "small": true,
        }
      }
    >
      <Styled(BodyCopy)
        className="emptyCard__description--mobile"
        color="text.primary"
        component="p"
        fontFamily="secondary"
        fontSize="fs14"
        fontWeight="regular"
        letterSpacing="normal"
        lineHeight="lh115"
        link={Object {}}
        tag="p"
        textAlign="left"
      />
    </Styled(Col)>
  </Styled(Row)>
</div>
`;

exports[`EmptyCard Component should render correctly with credit card 1`] = `
<div>
  <Styled(Row)
    fullBleed={true}
  >
    <Styled(Col)
      className="emptyCard__imgWrapper"
      colSize={
        Object {
          "large": 1,
          "medium": 1,
          "small": 1,
        }
      }
    >
      <img
        alt="credit card icon"
        className="emptyCard__img"
        data-locator="payment-CC-Icon"
        src="/static/images/credit-card.png"
      />
    </Styled(Col)>
    <Styled(Col)
      className="emptyCard__body"
      colSize={
        Object {
          "large": 11,
          "medium": 7,
          "small": 5,
        }
      }
      ignoreGutter={
        Object {
          "large": false,
          "medium": false,
          "small": true,
        }
      }
    >
      <Styled(BodyCopy)
        className="emptyCard__heading"
        color="text.primary"
        component="p"
        fontFamily="secondary"
        fontSize="fs14"
        fontWeight="semibold"
        letterSpacing="normal"
        lineHeight="lh107"
        link={Object {}}
        tag="p"
        textAlign="left"
      />
      <Styled(BodyCopy)
        className="emptyCard__description--desktop"
        color="text.primary"
        component="p"
        fontFamily="secondary"
        fontSize="fs14"
        fontWeight="regular"
        letterSpacing="normal"
        lineHeight="lh115"
        link={Object {}}
        tag="p"
        textAlign="left"
      />
    </Styled(Col)>
    <Styled(Col)
      className="emptyCard__description--mobile"
      colSize={
        Object {
          "large": 11,
          "medium": 7,
          "small": 6,
        }
      }
      ignoreGutter={
        Object {
          "large": false,
          "medium": false,
          "small": true,
        }
      }
    >
      <Styled(BodyCopy)
        className="emptyCard__description--mobile"
        color="text.primary"
        component="p"
        fontFamily="secondary"
        fontSize="fs14"
        fontWeight="regular"
        letterSpacing="normal"
        lineHeight="lh115"
        link={Object {}}
        tag="p"
        textAlign="left"
      />
    </Styled(Col)>
  </Styled(Row)>
</div>
`;
